added notebook and functions for renaming instances and changing param values

--- a/ensemble_tools/rename_successful_instances.ipynb
+++ b/ensemble_tools/rename_successful_instances.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "61e2bd27-bba8-4f11-9a0c-1a4a0530b624",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,149 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
-    "import shutil"
+    "import shutil\n",
+    "sys.path.append(\"/glade/u/home/adamhb/Earth-System-Model-Tools\")\n",
+    "import esm_tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "eceaf1c7-5724-440b-b5a7-40a49c45cb89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path to where the prior ensemble run parameter files are stored\n",
+    "path_to_ensemble_param_files_root = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/'\n",
+    "\n",
+    "# Path to subdir storing prior run ensemble member param files\n",
+    "param_files_subdir = \"CZ2_equilibrium_040924\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7dd72545-1ad7-401e-9d05-aaec6fab6789",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_files_with_substring(directory, substring):\n",
+    "    \"\"\"\n",
+    "    Returns a list of filenames in the given directory that contain the given substring.\n",
+    "    \n",
+    "    :param directory: The path to the directory to search in.\n",
+    "    :param substring: The substring to search for in filenames.\n",
+    "    :return: A list of filenames containing the substring.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # List all files in the directory\n",
+    "    all_files = os.listdir(directory)\n",
+    "\n",
+    "    # Filter the ones that contain the substring\n",
+    "    matching_files = [f for f in all_files if substring in f]\n",
+    "\n",
+    "    return matching_files[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5ed25709-57c1-46b9-a85c-b54926d43f8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def copy_and_rename_param_files(path_to_paramfile_dir, src_tag_names, dst_tag_names, param_file_base_name, pft_indices = None, var_to_change = None):\n",
+    "    for i,src_tag_name in enumerate(src_tag_names):\n",
+    "        \n",
+    "        src_file_name = find_files_with_substring(directory=os.path.join(path_to_ensemble_param_files_root,\n",
+    "                                                         param_files_subdir),\n",
+    "                                                         substring=\"_\"+src_tag_name)\n",
+    "        \n",
+    "        src_file_path = os.path.join(path_to_ensemble_param_files_root,param_files_subdir,src_file_name)\n",
+    "        \n",
+    "        \n",
+    "        new_tag = dst_tag_names[i]\n",
+    "        dst_file_name = param_file_base_name + \"_\" + new_tag + \".nc\"\n",
+    "        dst_file_path = os.path.join(path_to_ensemble_param_files_root,param_files_subdir,dst_file_name)\n",
+    "\n",
+    "        #print(\"src:\",src_file_name)\n",
+    "        #print(\"dst:\",dst_file_name)\n",
+    "        shutil.copy(src_file_path,dst_file_path)\n",
+    "\n",
+    "        # Make changes in new param file\n",
+    "        if pft_indices == None:\n",
+    "            old_var_value = esm_tools.extract_variable_from_netcdf(src_file_path,var_to_change,pft_index=None)\n",
+    "            new_var_value = old_var_value[0] * 0\n",
+    "            esm_tools.assign_variable_to_netcdf(dst_file_path,var_to_change,new_var_value)\n",
+    "        else:\n",
+    "            for pft_i in pft_indices:\n",
+    "                old_var_value = esm_tools.extract_variable_from_netcdf(src_file_path,var_to_change,pft_index=pft_i)\n",
+    "                new_var_value = old_var_value * 0.7\n",
+    "                esm_tools.assign_var_to_nc(dst_file_path,var_to_change,new_var_value,pft_i)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d06813c0-6e0b-4e59-9b7c-dc0d8674d387",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ten_inst = [2, 8, 14, 15, 22, 24, 25, 26, 30, 33]\n",
+    "src_tag_names = [str(i).zfill(4) for i in ten_inst]\n",
+    "dst_tag_names = [str(i).zfill(4) for i in list(range(119,129))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6705c65c-3142-43f1-acaf-e1708ec483cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0119',\n",
+       " '0120',\n",
+       " '0121',\n",
+       " '0122',\n",
+       " '0123',\n",
+       " '0124',\n",
+       " '0125',\n",
+       " '0126',\n",
+       " '0127',\n",
+       " '0128']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dst_tag_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d7d614a4-d3af-41cb-ba9d-5be069c48597",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "copy_and_rename_param_files(path_to_paramfile_dir=\"/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/CZ2_equilibrium_040924\", \n",
+    "                            src_tag_names=src_tag_names,\n",
+    "                            dst_tag_names=dst_tag_names,\n",
+    "                            param_file_base_name = \"ca_5pfts_100523\", pft_indices= [0,1,2,3,4], var_to_change=\"fates_leaf_vcmax25top\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6ee8fb6-78e0-443d-a1bb-dbc188f71c08",
+   "metadata": {},
+   "source": [
+    "## Old below here"
    ]
   },
   {
@@ -22,17 +164,73 @@
    "source": [
     "successfull_instances = pd.read_csv('successful_members_100323.csv')\n",
     "\n",
-    "# Path to where the prior ensemble run parameter files are stored\n",
-    "path_to_ensemble_param_files_root = '/glade/u/home/adamhb/ahb_params/fates_api_25/ensembles/'\n",
-    "\n",
-    "# Path to subdir storing prior run ensemble member param files\n",
-    "param_files_subdir = \"ca_ahb_5pfts_100223\"\n",
-    "\n",
     "# Path to next ensemble subdir\n",
     "next_ensemble_subdir = \"ca_ahb_5pfts_100223_equilibrium\"\n",
     "\n",
     "# New param file base name\n",
     "new_param_file_base_name = \"ca_ahb_5pfts_100223_equilibrium\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2a3eced8-b489-433b-a2f0-86c255907406",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'successfull_instances' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 15\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdst:\u001b[39m\u001b[38;5;124m\"\u001b[39m,dst_file_name)\n\u001b[1;32m     12\u001b[0m         \u001b[38;5;66;03m#shutil.copy(src_file_name,dst_file_name)\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i,inst \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[43msuccessfull_instances\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124minst\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[1;32m     16\u001b[0m     new_inst \u001b[38;5;241m=\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;66;03m# Get tag\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'successfull_instances' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def copy_and_rename_param_files(path_to_paramfile_dir, src_tag_names, dst_tag_names, param_file_base_name):\n",
+    "    for i,src_tag_name in src_tag_names:\n",
+    "        \n",
+    "        src_file_name = find_files_with_substring(directory=os.path.join(path_to_ensemble_param_files_root,\n",
+    "                                                         param_files_subdir),\n",
+    "                                                         substring=src_tag_name)\n",
+    "        new_tag = dst_tag_names[i]\n",
+    "        dst_file_name = param_file_base_name + \"_\" + new_tag + \".nc\"\n",
+    "\n",
+    "        print(\"src:\",src_file_name)\n",
+    "        print(\"dst:\",dst_file_name)\n",
+    "        #shutil.copy(src_file_name,dst_file_name)\n",
+    "        \n",
+    "\n",
+    "for i,inst in enumerate(successfull_instances['inst']):\n",
+    "    new_inst = i + 1\n",
+    "    \n",
+    "    # Get tag\n",
+    "    param_file_end = str(inst).rjust(4, '0')\n",
+    "    \n",
+    "    # Get param file with inst tag\n",
+    "    ref_nc_file = find_files_with_substring(directory=os.path.join(path_to_ensemble_param_files_root,\n",
+    "                                                                   param_files_subdir),\n",
+    "                                            substring=param_file_end)\n",
+    "    \n",
+    "    # Get full path of originl param file\n",
+    "    ref_nc_file_full_path = os.path.join(path_to_ensemble_param_files_root,param_files_subdir,ref_nc_file[0])\n",
+    "    \n",
+    "    print(\"originl_file:\",ref_nc_file_full_path)\n",
+    "    \n",
+    "    new_tag = str(new_inst).rjust(4, '0')\n",
+    "    \n",
+    "    new_name = new_param_file_base_name + \"_\" + new_tag + \".nc\"\n",
+    "    \n",
+    "    dst_file = os.path.join(path_to_ensemble_param_files_root,next_ensemble_subdir,new_name)\n",
+    "    \n",
+    "    \n",
+    "    print(\"destination:\",dst_file)\n",
+    "    print(\"\\n\")\n",
+    "    \n",
+    "    shutil.copy(ref_nc_file_full_path,dst_file)"
    ]
   },
   {
