--- a/ensemble_tools/ml_assissted_parameterization_selection_040524.ipynb
+++ b/ensemble_tools/ml_assissted_parameterization_selection_040524.ipynb
@@ -68,24 +68,25 @@
     "inst_per_case = 128\n",
     "\n",
     "# Cases\n",
-    "n_cases = 20\n",
+    "n_cases = 10\n",
+    "\n",
+    "target_ensemble_size = inst_per_case * n_cases\n",
     "\n",
     "# Prefix for subdirectories where param files for the ensemble are kept\n",
-    "param_files_subdir_prefix = 'ca_5pfts_ml_assisted_2160_110323'\n",
+    "param_files_subdir_prefix = f'ca_5pfts_ml_assisted_{target_ensemble_size}_040523'\n",
     "\n",
-    "path_DNN_NFailed_PFTs = os.path.join(path_to_esm_tools,'ml_emulators/saved_models/DNN_NFailed_110323_v1.h5')\n",
+    "path_DNN_NFailed_PFTs = os.path.join(path_to_ca_fates,'ml_emulators/saved_models/DNN_NFailed_110323_v1.h5')\n",
     "DNN_NFailed_PFTs = keras.models.load_model(path_DNN_NFailed_PFTs)\n",
     "#DNN_NFailed_PFTs = tf.keras.models.load_model(path_DNN_NFailed_PFTs)\n",
     "\n",
-    "path_to_ensemble_data =os.path.join(path_to_esm_tools,'ml_emulators/ML_training_data_110323.csv')\n",
+    "path_to_ensemble_data =os.path.join(path_to_ca_fates,'ml_emulators/ML_training_data_110323.csv')\n",
     "\n",
     "# Path to parameter ranges\n",
-    "param_ranges_full = pd.read_csv(os.path.join(path_to_ca_fates,'parameter_ranges/param_range_archive/param_ranges_100223.csv'))\n",
+    "param_ranges_full = pd.read_csv(os.path.join(path_to_ca_fates,'parameter_ranges/param_range_archive/param_ranges_040524.csv'))\n",
     "\n",
     "# How large should each lhs sample be in the generator\n",
     "batch_size = 1000\n",
-    "starting_seed = 16\n",
-    "target_ensemble_size = 2160"
+    "starting_seed = 17"
    ]
   },
   {
@@ -93,7 +94,9 @@
    "id": "59ebc4da",
    "metadata": {},
    "source": [
-    "## Check that saved model is working"
+    "## Check that saved model is working\n",
+    "\n",
+    "pick up here"
    ]
   },
   {
@@ -588,7 +591,10 @@
    "id": "a2f1f83b",
    "metadata": {},
    "source": [
-    "## Generate promising ensemble memebers"
+    "## Generate promising ensemble memebers\n",
+    "\n",
+    "\n",
+    "Make sure I can turn this off"
    ]
   },
   {
