updates to parameter ranges and lhs script

--- a/figures/results.ipynb
+++ b/figures/results.ipynb
@@ -1331,9 +1331,7 @@
   {
    "cell_type": "markdown",
    "id": "5028f5ac-c881-4b82-b4b3-af883512304e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Fields for stand structure"
    ]
@@ -2226,9 +2224,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env4_work",
+   "display_name": "env4",
    "language": "python",
-   "name": "env4_work"
+   "name": "env4"
   },
   "language_info": {
    "codemirror_mode": {
