--- a/figures/treatment_test.ipynb
+++ b/figures/treatment_test.ipynb
@@ -2,16 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7591b53d-a0f7-4557-b757-2572f70da32d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sys' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m      6\u001b[0m warnings\u001b[38;5;241m.\u001b[39mfilterwarnings(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 7\u001b[0m \u001b[43msys\u001b[49m\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/glade/u/home/adamhb/Earth-System-Model-Tools/\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mesm_tools\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pyplot \u001b[38;5;28;01mas\u001b[39;00m plt\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sys' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import netCDF4 as nc4\n",
     "import xarray as xr\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import warnings\n",
+    "import sys\n",
     "warnings.filterwarnings('ignore')\n",
     "sys.path.append('/glade/u/home/adamhb/Earth-System-Model-Tools/')\n",
     "import esm_tools\n",
@@ -41,9 +54,7 @@
   {
    "cell_type": "markdown",
    "id": "415946ea-7d58-456b-9039-6e9e7899055e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Fields"
    ]
@@ -399,9 +410,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env4_work",
+   "display_name": "env4",
    "language": "python",
-   "name": "env4_work"
+   "name": "env4"
   },
   "language_info": {
    "codemirror_mode": {
