--- a/parameter_ranges/analyze_conifer_and_oak_allometry.ipynb
+++ b/parameter_ranges/analyze_conifer_and_oak_allometry.ipynb
@@ -4003,9 +4003,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env4_work",
+   "display_name": "env4",
    "language": "python",
-   "name": "env4_work"
+   "name": "env4"
   },
   "language_info": {
    "codemirror_mode": {
