updated oak param ranges

--- a/figures/fire_bug_fix.ipynb
+++ b/figures/fire_bug_fix.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "c79f88fc-fa19-4570-9c2b-1f2a4a598926",
    "metadata": {},
    "outputs": [],
@@ -925,7 +925,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7a3e812b0ee0>]"
+       "[<matplotlib.lines.Line2D at 0x7a45241a0b20>]"
       ]
      },
      "execution_count": 24,
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "7ceca84b-5f42-4c1a-9785-ec3a526e52de",
    "metadata": {},
    "outputs": [
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "id": "6dc88937-f20f-41c3-bf25-41878c879c9b",
    "metadata": {},
    "outputs": [
