--- a/parameter_ranges/analyze_oak_trait_data.ipynb
+++ b/parameter_ranges/analyze_oak_trait_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "ba823db8",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d8fbcb27",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "28669341",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "a7b322b2",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "bb930a7a",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "5e8213f7-499c-4ca9-9858-d4c292d5cee8",
    "metadata": {},
    "outputs": [
@@ -875,7 +875,7 @@
        "90  Stem, branch or twig sapwood cross-sectional a...       171   1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "4a4ffcf4",
    "metadata": {},
    "outputs": [],
@@ -905,7 +905,7 @@
     "try_df_raw_CA_oak = pd.read_csv(CA_oak_try_data, sep=\"\\t\", encoding='latin1')[['ObservationID','SpeciesName','AccSpeciesName','TraitID','TraitName','OrigValueStr','OrigUnitStr','StdValue','UnitName','ErrorRisk']]\n",
     "try_df_evergreen_oak = pd.read_csv(evergreen_oak_data, sep=\"\\t\", encoding='latin1')[['ObservationID','SpeciesName','AccSpeciesName','TraitID','TraitName','OrigValueStr','OrigUnitStr','StdValue','UnitName','ErrorRisk']]\n",
     "\n",
-    "try_df_raw = pd.concat([try_df_raw_QUCH,try_df_raw_QUKE,try_df_raw_CA_oak])\n",
+    "try_df_raw = pd.concat([try_df_raw_QUCH,try_df_raw_QUKE,try_df_raw_CA_oak,try_df_evergreen_oak])\n",
     "\n",
     "try_df_raw = try_df_raw[['AccSpeciesName','TraitName','OrigValueStr','OrigUnitStr','StdValue','UnitName']]\n",
     "\n",
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "id": "01f56d40-52db-4b0f-868d-7adfc49055a1",
    "metadata": {},
    "outputs": [
@@ -928,8 +928,8 @@
        "Leaf area per leaf dry mass (specific leaf area, SLA or 1/LMA): undefined if petiole is in- or excluded    972\n",
        "Leaf nitrogen (N) content per leaf area                                                                    963\n",
        "Leaf carbon (C) content per leaf area                                                                      944\n",
-       "Photosynthesis carboxylation capacity (Vcmax) per leaf dry mass (Farquhar model)                           450\n",
-       "Photosynthesis carboxylation capacity (Vcmax) per leaf area (Farquhar model)                               450\n",
+       "Photosynthesis carboxylation capacity (Vcmax) per leaf area (Farquhar model)                               512\n",
+       "Photosynthesis carboxylation capacity (Vcmax) per leaf dry mass (Farquhar model)                           510\n",
        "Xylem hydraulic vulnerability curve (P20, P50, P80)                                                        162\n",
        "Seed dry mass                                                                                              138\n",
        "Leaf phenology type                                                                                        102\n",
@@ -1017,7 +1017,7 @@
        "Name: TraitName, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "id": "150a24c4-5d1b-4aa6-abc7-c7e41e0674f0",
    "metadata": {},
    "outputs": [
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "e0b9365e-4292-4a7d-8ba7-22d5851506e4",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1061,7 @@
        "Name: SpeciesName, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "e063e17f-3d50-4125-9b54-40afcca24092",
    "metadata": {},
    "outputs": [
@@ -1080,49 +1080,130 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quercus ilex     58\n",
-      "Quercus suber     4\n",
-      "Name: SpeciesName, dtype: int64\n",
-      "mean 39.50743220023495\n",
-      "std 14.721502699481805\n"
+      "Quercus douglasii    450\n",
+      "Quercus ilex          58\n",
+      "Quercus suber          4\n",
+      "Name: AccSpeciesName, dtype: int64\n",
+      "mean 62.21169567029505\n",
+      "std 28.009810051021464\n"
      ]
     }
    ],
    "source": [
-    "umol_m_s = try_df_evergreen_oak['UnitName'] == 'micro mol m-2 s-1'\n",
-    "vcmax_df = try_df_evergreen_oak.loc[umol_m_s]\n",
-    "print(vcmax_df['SpeciesName'].value_counts())\n",
+    "# umol_m_s = try_df_evergreen_oak['UnitName'] == 'micro mol m-2 s-1'\n",
+    "# vcmax_df = try_df_evergreen_oak.loc[umol_m_s]\n",
+    "# print(vcmax_df['SpeciesName'].value_counts())\n",
+    "# print('mean',vcmax_df['StdValue'].values.mean())\n",
+    "# print('std',vcmax_df['StdValue'].values.std())\n",
+    "\n",
+    "umol_m_s = try_df_raw['UnitName'] == 'micro mol m-2 s-1'\n",
+    "vcmax_df = try_df_raw.loc[umol_m_s]\n",
+    "print(vcmax_df['AccSpeciesName'].value_counts())\n",
     "print('mean',vcmax_df['StdValue'].values.mean())\n",
     "print('std',vcmax_df['StdValue'].values.std())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "bf452bac-6785-43df-9397-c7b4ae79bf24",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0.25</th>\n",
+       "      <th>0.75</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AccSpeciesName</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Quercus douglasii</th>\n",
+       "      <td>45.051587</td>\n",
+       "      <td>82.981634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quercus ilex</th>\n",
+       "      <td>29.892991</td>\n",
+       "      <td>44.753682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quercus suber</th>\n",
+       "      <td>36.277500</td>\n",
+       "      <td>56.327500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "SpeciesName\n",
-       "Quercus ilex     38.945876\n",
-       "Quercus suber    47.650000\n",
-       "Name: StdValue, dtype: float64"
+       "                        0.25       0.75\n",
+       "AccSpeciesName                         \n",
+       "Quercus douglasii  45.051587  82.981634\n",
+       "Quercus ilex       29.892991  44.753682\n",
+       "Quercus suber      36.277500  56.327500"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vcmax_df.groupby('SpeciesName').mean()['StdValue']"
+    "vcmax_df.groupby('AccSpeciesName')['StdValue'].quantile([0.25,0.75]).unstack()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
+   "id": "247b775f-fb5d-4684-8ba1-e294440749ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AccSpeciesName\n",
+       "Quercus douglasii    65.339839\n",
+       "Quercus ilex         38.945876\n",
+       "Quercus suber        47.650000\n",
+       "Name: StdValue, dtype: float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vcmax_df.groupby('AccSpeciesName').mean()['StdValue']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "d3f5f7dc",
    "metadata": {},
    "outputs": [],
@@ -1140,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "64ca42aa",
    "metadata": {},
    "outputs": [
@@ -1178,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "b7f9a2dd-0093-466c-9400-bdba33d6e49f",
    "metadata": {},
    "outputs": [
@@ -5270,7 +5351,7 @@
        "53806       0.633333333          g / ml    0.633333              g/cm3  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5281,7 +5362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "5301932e",
    "metadata": {},
    "outputs": [],
@@ -5299,7 +5380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "7066073c",
    "metadata": {},
    "outputs": [
@@ -5307,13 +5388,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5335/4023397515.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_7290/4023397515.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  try_df['fates_value'] = fates_values\n",
-      "/tmp/ipykernel_5335/4023397515.py:7: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_7290/4023397515.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -5342,7 +5423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "ad7fc41d",
    "metadata": {},
    "outputs": [],
@@ -5364,7 +5445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "1bed2673",
    "metadata": {},
    "outputs": [
@@ -5450,7 +5531,7 @@
        "max    127.296133   127.296133"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5469,7 +5550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "3c7b6707",
    "metadata": {},
    "outputs": [
@@ -5483,7 +5564,7 @@
        " 10: 31.475380780524404}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5502,7 +5583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "1213586b",
    "metadata": {},
    "outputs": [
@@ -5516,7 +5597,7 @@
        " 10: 0.01179225806452}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5535,7 +5616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "ea1aba4c",
    "metadata": {},
    "outputs": [],
@@ -5553,11 +5634,34 @@
    "cell_type": "raw",
    "id": "e9c8fc53-db2f-4487-ac7a-da03a5c9a617",
    "metadata": {},
-   "source": []
+   "source": [
+    "print(0.0123 * 1.2)\n",
+    "print(0.0123 * 0.8)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
+   "id": "aef6fa7a-3926-4661-96de-7ef1fc160149",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01845\n",
+      "0.009840000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0.0123 * 1.5)\n",
+    "print(0.0123 * 0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "aadb29bb-270f-46f3-9563-a1e5ce1ded70",
    "metadata": {},
    "outputs": [
@@ -5744,7 +5848,7 @@
        "9            1        QUDO     try  oak  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5755,7 +5859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "ac06e5b2",
    "metadata": {},
    "outputs": [],
