--- a/parameter_ranges/leaf_econ_spectrum_data.ipynb
+++ b/parameter_ranges/leaf_econ_spectrum_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "7d7d6c4f-c69d-40a3-aa06-ba685b8f1132",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "19f0da96-22e7-419a-b4b5-54f06c3bbc15",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "4a460d96-a307-497f-b9d7-4db11cb09fb8",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
      "output_type": "stream",
      "text": [
       "Fir LL [yrs]: [7.95827155 8.14364351]\n",
-      "Calocedrus LL [yrs]: [3.9885841  1.51641738]\n",
+      "Thuja LL [yrs]: [3.9885841  1.51641738]\n",
       "Pinus LL [yrs]: [       nan        nan        nan        nan        nan        nan\n",
       " 3.02565046 2.75942601 1.74108011 5.50577873 2.69661381 2.24294567\n",
       " 2.24294567 3.02565046 1.74108011 2.24294567 1.51641738        nan\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "7538817f-2003-43c4-bd31-83029172ebed",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "97626978-97b2-4feb-8751-0dac44fa8360",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "Name: Species, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,24 +184,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "9a9d029f-ea41-4e9a-a36d-f5efdf3e8b90",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.01380479607680484\n",
-      "0.03396487304923489\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "e18e6e35-0f9a-4bd4-86dc-3ced8b341fbb",
    "metadata": {},
    "outputs": [
@@ -213,7 +204,7 @@
        "        0.086,  0.095, -0.161,  0.072,  0.121])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "fd35a76a-efca-4e2e-9ebc-e9a00a14f6c7",
    "metadata": {},
    "outputs": [
@@ -234,7 +225,7 @@
        "1.6749428760264373"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
