--- a/misc_tools/synthesize_ensemble_members_011824.ipynb
+++ b/misc_tools/synthesize_ensemble_members_011824.ipynb
@@ -1549,9 +1549,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env4",
+   "display_name": "env4_work",
    "language": "python",
-   "name": "env4"
+   "name": "env4_work"
   },
   "language_info": {
    "codemirror_mode": {
