--- a/notebooks/explore_aggregated_output.ipynb
+++ b/notebooks/explore_aggregated_output.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "id": "11f5d508-46db-4dae-b62e-71dde49153be",
    "metadata": {},
    "outputs": [],
@@ -56,21 +56,104 @@
     "# Large ensembles ensembles\n",
     "\n",
     "#afterBugFix_1280_041923_\n",
-    "#df1 = pd.read_csv('/glade/work/adamhb/processed_output/CZ2_equilibrium_041924_XX_-17e2acb6a_FATES-1449c787/afterBugFix_1280_041923_metrics_and_params.csv')\n",
+    "df1 = pd.read_csv('/glade/work/adamhb/processed_output/CZ2_equilibrium_041924_XX_-17e2acb6a_FATES-1449c787/afterBugFix_1280_041923_metrics_and_params.csv')\n",
     "\n",
     "#afterOakFix\n",
-    "#df2 = pd.read_csv('/glade/work/adamhb/processed_output/CZ2_equilibrium_042324_XX_-17e2acb6a_FATES-1449c787/afterOakFix_2560_042323_metrics_and_params.csv')\n",
+    "df2 = pd.read_csv('/glade/work/adamhb/processed_output/CZ2_equilibrium_042324_XX_-17e2acb6a_FATES-1449c787/afterOakFix_2560_042323_metrics_and_params.csv')\n",
     "\n",
     "#df3 = pd.concat([df1,df2],axis = 0)\n",
     "#df3.to_csv('/glade/work/adamhb/processed_output/CZ2_equilibrium_041924_and_042324_XX.csv')\n",
     "\n",
     "# The below was used for the first \"equilibrium\" (450) year ensemble below\n",
-    "#df = pd.read_csv('/glade/work/adamhb/processed_output/CZ2_equilibrium_700yrs_042524_01_-17e2acb6a_FATES-1449c787/equilibrium_700yrs_042524_metrics_and_params.csv')\n",
+    "df3 = pd.read_csv('/glade/work/adamhb/processed_output/CZ2_equilibrium_700yrs_042524_01_-17e2acb6a_FATES-1449c787/equilibrium_700yrs_042524_metrics_and_params.csv')\n",
     "\n",
-    "#df = pd.read_csv('/glade/work/adamhb/processed_output/ml_supported_ensemble_050224_XX_-17e2acb6a_FATES-1449c787/ml_supported_ensemble_2560_050224_metrics_and_params.csv')\n",
+    "df4 = pd.read_csv('/glade/work/adamhb/processed_output/ml_supported_ensemble_050224_XX_-17e2acb6a_FATES-1449c787/ml_supported_ensemble_2560_050224_metrics_and_params.csv')\n",
     "\n",
     "# 700 yr equilib 050924\n",
-    "df = pd.read_csv('/glade/work/adamhb/processed_output/equilibrium_700yrs_050924_01/equilibrium_700yrs_050924_metrics_and_params.csv')"
+    "df5 = pd.read_csv('/glade/work/adamhb/processed_output/equilibrium_700yrs_050924_01/equilibrium_700yrs_050924_metrics_and_params.csv')\n",
+    "\n",
+    "dfs = [df1,df2,df3,df4,df5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e96b5d8e-c1bc-4b0d-8554-71d0b77d4d41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df5['Fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "1119d659-4e7a-41a1-8744-fc2c7f9a774b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df 0 has 896 members\n",
+      "number of members with coexistence 9\n",
+      "df 1 has 2176 members\n",
+      "number of members with coexistence 12\n",
+      "df 2 has 99 members\n",
+      "number of members with coexistence 2\n",
+      "df 3 has 2304 members\n",
+      "number of members with coexistence 74\n",
+      "df 4 has 82 members\n",
+      "number of members with coexistence 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,df in enumerate(dfs):\n",
+    "    print(\"df\",i,\"has\",len(df),\"members\")\n",
+    "    print(\"number of members with coexistence\",len(df.loc[df['FailedPFTs'] == 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "104e376e-2d53-476d-ade4-366e0b79efce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3072"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "896 + 2176"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "e83f9087-abe8-4133-a8ed-2a38ce47a7c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5376"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3072 + 2304"
    ]
   },
   {
