--- a/notebooks/size_class_dist.ipynb
+++ b/notebooks/size_class_dist.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "id": "e8fec2f2-f262-422a-81aa-1ced4f7dfc09",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
        "<module 'esm_tools' from '/glade/u/home/adamhb/Earth-System-Model-Tools/esm_tools.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "id": "ecab71ac-8af5-4d08-b07b-1c82cb2f98a9",
    "metadata": {},
    "outputs": [],
@@ -272,14 +272,7 @@
      ]
     }
    ],
-   "source": [
-    " ds = esm_tools.load_fates_output_data(model_output_root='/glade/derecho/scratch/adamhb',\n",
-    "                                              case_name = 'equilibrium_700yrs_050924_01_-17e2acb6a_FATES-1449c787',\n",
-    "                                              years = [1868,1869],\n",
-    "                                              fields = fields,\n",
-    "                                              inst_tag = \"0061\",\n",
-    "                                              manual_path = None)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -821,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 65,
    "id": "21f5836d-8a8e-496f-82fe-cb963d9d4e3b",
    "metadata": {},
    "outputs": [],
@@ -836,14 +829,14 @@
    "id": "bca3ed3a-ef47-409d-b3cb-470a3561691e",
    "metadata": {},
    "source": [
-    "### Make size class distribution figures in 1870\n",
+    "### Make size class distribution figures in 1870 before logging\n",
     "\n",
     "Need to add obs and take out oaks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "id": "6fd9d094-4761-4cdf-9440-4cb76fc075d9",
    "metadata": {},
    "outputs": [
@@ -1458,6 +1451,29 @@
     "\n",
     "# Display the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53f6be93-215e-480b-8ef0-90f9e2bf3253",
+   "metadata": {},
+   "source": [
+    "## Scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6928696-a02b-401b-bf4f-74cffc779a17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " ds = esm_tools.load_fates_output_data(model_output_root='/glade/derecho/scratch/adamhb',\n",
+    "                                              case_name = 'equilibrium_700yrs_050924_01_-17e2acb6a_FATES-1449c787',\n",
+    "                                              years = [1868,1869],\n",
+    "                                              fields = fields,\n",
+    "                                              inst_tag = \"0061\",\n",
+    "                                              manual_path = None)"
    ]
   }
  ],
