--- a/parameter_ranges/post_ensemble_analysis/analyze_ensemble_output.ipynb
+++ b/parameter_ranges/post_ensemble_analysis/analyze_ensemble_output.ipynb
@@ -930,8 +930,7 @@
    "execution_count": 9,
    "id": "67c7444b",
    "metadata": {
-    "code_folding": [],
-    "scrolled": false
+    "code_folding": []
    },
    "outputs": [
     {
@@ -4534,9 +4533,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "la-veg",
+   "display_name": "env4",
    "language": "python",
-   "name": "la-veg"
+   "name": "env4"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4548,7 +4547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.13"
   },
   "toc": {
    "base_numbering": 1,
