--- a/notebooks/get_var_percentiles.ipynb
+++ b/notebooks/get_var_percentiles.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "f46a28da-58e6-4c50-98ee-46e1a063bc37",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "id": "26376f69-26c9-4540-a82e-1e73ea34e767",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "593feae8-7e63-44c5-9079-2f972309f824",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "e71528be-3506-462d-84c1-5c605041c44c",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        " 'fates_nonhydro_smpsc_2']"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "00b5c366-0930-4347-b956-b30ede63169d",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "id": "d40b266e-bdc0-4507-b61a-4205d0500f7e",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "id": "8b52cab5-dd7e-4861-b3e3-22cf8e9994e2",
    "metadata": {},
    "outputs": [
@@ -1646,13 +1646,13 @@
        "124 -453195.891767      38  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pct_df"
+    "pct_df.fillna(\"all"
    ]
   },
   {
